First loop through density ratios

--- a/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
+++ b/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "63f473bc-65f3-4d85-8715-a212abffeeeb",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e95d23e4-7fb8-4e83-a906-f3f691f4fdf2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fe1b6200-68f0-48ba-923d-148ce33b23d3",
    "metadata": {},
    "outputs": [],
@@ -61,19 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "af161de9-be10-4b51-9bf2-a8aab85da9a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['SR_binned', 'CR']\n",
-      "['SR']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# path prefix for general save directory\n",
     "path_prefix = config['path_prefix']\n",
@@ -105,19 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "872559e9-4eb3-4a5f-a2f2-6f286c849503",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_119/349965629.py:12: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
-      "  weights_Asimov = np.array(dataset[mask_Asimov].weights.ravel())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the nominal dataset for evaluation\n",
     "dataset = pd.read_hdf(f\"{saved_data}dataset_preselected_nominal_SR.h5\", key=\"dataset\", mode='r')\n",
@@ -135,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3fe09af3-59e9-4273-9c61-34e596595407",
    "metadata": {},
    "outputs": [],
@@ -145,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "5c39c71f-00c9-415d-aa7d-21783ba15b91",
    "metadata": {},
    "outputs": [],
@@ -156,24 +138,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "917a2ac6-8a8a-4da0-abd1-3824f8e99124",
+   "execution_count": null,
+   "id": "52774015-cc7d-427a-999c-eecf7610271d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec[\"channels\"].append(\n",
-    "    {\n",
-    "        \"name\": \"SR\",\n",
-    "        \"type\": \"unbinned\",\n",
-    "        \"weights\": path_to_Asimov_weights,\n",
-    "        \"samples\": []\n",
-    "    }\n",
+    "spec_channels_list = []\n",
+    "\n",
+    "spec_channels_list.append(\n",
+    "    \"name\": \"SR\",\n",
+    "    \"type\": \"unbinned\",\n",
+    "    \"weights\": path_to_Asimov_weights,\n",
+    "    \"samples\": []\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
+   "id": "917a2ac6-8a8a-4da0-abd1-3824f8e99124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spec[\"channels\"].append(\n",
+    "#     {\n",
+    "#         \"name\": \"SR\",\n",
+    "#         \"type\": \"unbinned\",\n",
+    "#         \"weights\": path_to_Asimov_weights,\n",
+    "#         \"samples\": []\n",
+    "#     }\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "e7f58b69-10a8-4504-b128-4f436b19042a",
    "metadata": {},
    "outputs": [
@@ -189,7 +188,7 @@
        " 'version': []}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,37 +199,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d44bfc84-e5f2-4014-b181-34ebb95bc363",
+   "execution_count": 33,
+   "id": "65c3c593-f9f1-4d44-a5d6-14f4861b400d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for process in all_process:\n",
+    "    if process in mix_model_hypotheses:\n",
+    "        path_to_ratio = f'{path_to_workspace_data_nominal}output_ratios_{process_type}/ratio_{process_type}.npy'\n",
+    "        spec[\"channels\"][0][\"samples\"].append(\n",
+    "            {\n",
+    "                \"name\": process,\n",
+    "                \"data\": path_to_ratio,\n",
+    "                \"modifiers\":[\n",
+    "                    {\n",
+    "                        \"data\": None,\n",
+    "                        \"name\": f\"mu_{process}\",\n",
+    "                        \"type\": \"normfactor\",   \n",
+    "                    },\n",
+    "                ]\n",
+    "            }\n",
+    "        )\n",
+    "    else:\n",
+    "        # The case where a sample is used as reference and thus has density ratio = 1 by default\n",
+    "        spec[\"channels\"][0][\"samples\"].append(\n",
+    "            {\n",
+    "                \"name\": process,\n",
+    "                \"data\": \"\",\n",
+    "                \"modifiers\":[\n",
+    "                    {\n",
+    "                        \"data\": None,\n",
+    "                        \"name\": f\"mu_{process}\",\n",
+    "                        \"type\": \"normfactor\",   \n",
+    "                    },\n",
+    "                ]\n",
+    "            }\n",
+    "        )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0f9b22eb-ca54-4f47-acef-30ccdf433343",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['TES', 'JES']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'channels': [{'name': 'SR',\n",
+       "   'type': 'unbinned',\n",
+       "   'weights': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal//weights_nominal_Asimov.npy',\n",
+       "   'samples': [{'name': 'htautau',\n",
+       "     'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
+       "     'modifiers': [{'data': None,\n",
+       "       'name': 'mu_htautau',\n",
+       "       'type': 'normfactor'}]},\n",
+       "    {'name': 'ttbar',\n",
+       "     'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
+       "     'modifiers': [{'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}]},\n",
+       "    {'name': 'ztautau',\n",
+       "     'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
+       "     'modifiers': [{'data': None,\n",
+       "       'name': 'mu_ztautau',\n",
+       "       'type': 'normfactor'}]}]}],\n",
+       " 'measurements': [],\n",
+       " 'observations': [],\n",
+       " 'version': []}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_to_dict_systs = f\"{saved_data}dict_systs.npy\"\n",
+    "spec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9e2a9fc-de1c-4d9f-9bb1-2e9a4908d009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the saved density ratios\n",
+    "ratios = {}\n",
+    "ratios['SR'] = {}\n",
     "\n",
-    "# Check if user has provided uncertainty NPs\n",
-    "if \"dict_systs\" in config:\n",
-    "    dict_systs = config[\"dict_systs\"]\n",
-    "    # Load the SR yield variations\n",
-    "    with open(f\"{saved_data}yield_SR_variations.pkl\", \"rb\") as fp:\n",
-    "        nu_var_SR = pickle.load(fp)\n",
-    "    # Save the Control Region variation histogram\n",
-    "    with open(f\"{saved_data}hist_binned_variations.pkl\", \"rb\") as fp:\n",
-    "        hist_variations = pickle.load(fp)\n",
-    "else:\n",
-    "    dict_systs = {}\n",
+    "for process_type in mix_model_hypotheses:\n",
     "\n",
-    "# Full list of systematics\n",
-    "list_syst = [key for key in dict_systs]\n",
+    "    path_to_ratio = f'{top_path}output_ratios_{process_type}/ratio_{process_type}.npy'\n",
+    "    ratios['SR'][process_type] = jnp.array(np.load(path_to_ratio)[mask_Asimov])\n",
     "\n",
-    "print(list_syst)"
+    "for process in all_process:\n",
+    "    if process not in mix_model_hypotheses:\n",
+    "\n",
+    "        ratios['SR'][process] = jnp.array(np.ones_like(ratios['SR'][mix_model_hypotheses[0]]))\n"
    ]
   },
   {
