channel list done

--- a/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
+++ b/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
@@ -2,10 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "63f473bc-65f3-4d85-8715-a212abffeeeb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR! Session/line number was not unique in database. History logging moved to new session 706\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "  hep.set_style(\"ATLAS\")\n",
+      "2025-08-05 14:22:41.842872: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1754403761.862438    1153 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1754403761.868337    1153 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-08-05 14:22:41.889193: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, importlib\n",
     "# sys.path.append('../')\n",
@@ -34,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e95d23e4-7fb8-4e83-a906-f3f691f4fdf2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fe1b6200-68f0-48ba-923d-148ce33b23d3",
    "metadata": {},
    "outputs": [],
@@ -61,10 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "af161de9-be10-4b51-9bf2-a8aab85da9a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SR_binned', 'CR']\n",
+      "['SR']\n"
+     ]
+    }
+   ],
    "source": [
     "# path prefix for general save directory\n",
     "path_prefix = config['path_prefix']\n",
@@ -96,10 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "872559e9-4eb3-4a5f-a2f2-6f286c849503",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1153/349965629.py:12: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
+      "  weights_Asimov = np.array(dataset[mask_Asimov].weights.ravel())\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the nominal dataset for evaluation\n",
     "dataset = pd.read_hdf(f\"{saved_data}dataset_preselected_nominal_SR.h5\", key=\"dataset\", mode='r')\n",
@@ -117,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "3fe09af3-59e9-4273-9c61-34e596595407",
    "metadata": {},
    "outputs": [],
@@ -127,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5c39c71f-00c9-415d-aa7d-21783ba15b91",
    "metadata": {},
    "outputs": [],
@@ -138,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "52774015-cc7d-427a-999c-eecf7610271d",
    "metadata": {},
    "outputs": [],
@@ -146,60 +186,18 @@
     "spec_channels_list = []\n",
     "\n",
     "spec_channels_list.append(\n",
-    "    \"name\": \"SR\",\n",
-    "    \"type\": \"unbinned\",\n",
-    "    \"weights\": path_to_Asimov_weights,\n",
-    "    \"samples\": []\n",
+    "    {\n",
+    "        \"name\": \"SR\",\n",
+    "        \"type\": \"unbinned\",\n",
+    "        \"weights\": path_to_Asimov_weights,\n",
+    "        \"samples\": []\n",
+    "    }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "917a2ac6-8a8a-4da0-abd1-3824f8e99124",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spec[\"channels\"].append(\n",
-    "#     {\n",
-    "#         \"name\": \"SR\",\n",
-    "#         \"type\": \"unbinned\",\n",
-    "#         \"weights\": path_to_Asimov_weights,\n",
-    "#         \"samples\": []\n",
-    "#     }\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "e7f58b69-10a8-4504-b128-4f436b19042a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'channels': [{'name': 'SR',\n",
-       "   'type': 'unbinned',\n",
-       "   'weights': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal//weights_nominal_Asimov.npy',\n",
-       "   'samples': []}],\n",
-       " 'measurements': [],\n",
-       " 'observations': [],\n",
-       " 'version': []}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "65c3c593-f9f1-4d44-a5d6-14f4861b400d",
    "metadata": {},
    "outputs": [],
@@ -207,7 +205,7 @@
     "for process in all_process:\n",
     "    if process in mix_model_hypotheses:\n",
     "        path_to_ratio = f'{path_to_workspace_data_nominal}output_ratios_{process_type}/ratio_{process_type}.npy'\n",
-    "        spec[\"channels\"][0][\"samples\"].append(\n",
+    "        spec_channels_list[0][\"samples\"].append(\n",
     "            {\n",
     "                \"name\": process,\n",
     "                \"data\": path_to_ratio,\n",
@@ -222,7 +220,7 @@
     "        )\n",
     "    else:\n",
     "        # The case where a sample is used as reference and thus has density ratio = 1 by default\n",
-    "        spec[\"channels\"][0][\"samples\"].append(\n",
+    "        spec_channels_list[0][\"samples\"].append(\n",
     "            {\n",
     "                \"name\": process,\n",
     "                \"data\": \"\",\n",
@@ -240,63 +238,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "0f9b22eb-ca54-4f47-acef-30ccdf433343",
+   "execution_count": 25,
+   "id": "493799b2-93d1-4061-8907-3ce6aa73cce4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for channel in channels_binned:\n",
+    "    spec_channels_list.append(\n",
+    "        {\n",
+    "            \"name\": channel,\n",
+    "            \"type\": \"binned\",\n",
+    "            \"samples\": []\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    with open(f\"{saved_data}hist_binned_{channel}.pkl\", \"rb\") as fp:\n",
+    "            hist_channel = pickle.load(fp)\n",
+    "        \n",
+    "    for process in all_process:\n",
+    "        \n",
+    "        spec_channels_list[-1][\"samples\"].append(\n",
+    "            {\n",
+    "                \"name\": process,\n",
+    "                \"data\": hist_channel[process],\n",
+    "                \"modifiers\": {\n",
+    "                    \"data\": None,\n",
+    "                    \"name\": f\"mu_{process}\",\n",
+    "                    \"type\": \"normfactor\",  \n",
+    "                }\n",
+    "            }\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bf457a30-e0fe-475c-8d17-5c58d24243d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'channels': [{'name': 'SR',\n",
-       "   'type': 'unbinned',\n",
-       "   'weights': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal//weights_nominal_Asimov.npy',\n",
-       "   'samples': [{'name': 'htautau',\n",
-       "     'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "     'modifiers': [{'data': None,\n",
-       "       'name': 'mu_htautau',\n",
-       "       'type': 'normfactor'}]},\n",
-       "    {'name': 'ttbar',\n",
-       "     'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "     'modifiers': [{'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}]},\n",
-       "    {'name': 'ztautau',\n",
-       "     'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "     'modifiers': [{'data': None,\n",
-       "       'name': 'mu_ztautau',\n",
-       "       'type': 'normfactor'}]}]}],\n",
-       " 'measurements': [],\n",
-       " 'observations': [],\n",
-       " 'version': []}"
+       "[{'name': 'SR',\n",
+       "  'type': 'unbinned',\n",
+       "  'weights': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal//weights_nominal_Asimov.npy',\n",
+       "  'samples': [{'name': 'htautau',\n",
+       "    'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
+       "    'modifiers': [{'data': None, 'name': 'mu_htautau', 'type': 'normfactor'}]},\n",
+       "   {'name': 'ttbar',\n",
+       "    'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
+       "    'modifiers': [{'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}]},\n",
+       "   {'name': 'ztautau',\n",
+       "    'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
+       "    'modifiers': [{'data': None,\n",
+       "      'name': 'mu_ztautau',\n",
+       "      'type': 'normfactor'}]}]},\n",
+       " {'name': 'SR_binned',\n",
+       "  'type': 'binned',\n",
+       "  'samples': [{'name': 'htautau',\n",
+       "    'data': array([1.3404816], dtype=float32),\n",
+       "    'modifiers': {'data': None, 'name': 'mu_htautau', 'type': 'normfactor'}},\n",
+       "   {'name': 'ttbar',\n",
+       "    'data': array([0.20330866], dtype=float32),\n",
+       "    'modifiers': {'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}},\n",
+       "   {'name': 'ztautau',\n",
+       "    'data': array([7.261923], dtype=float32),\n",
+       "    'modifiers': {'data': None, 'name': 'mu_ztautau', 'type': 'normfactor'}}]},\n",
+       " {'name': 'CR',\n",
+       "  'type': 'binned',\n",
+       "  'samples': [{'name': 'htautau',\n",
+       "    'data': array([3.4308802e-02, 1.9245273e+00, 1.4397985e+01, 1.4372072e+02],\n",
+       "          dtype=float32),\n",
+       "    'modifiers': {'data': None, 'name': 'mu_htautau', 'type': 'normfactor'}},\n",
+       "   {'name': 'ttbar',\n",
+       "    'data': array([  110.26796,  8016.983  , 20536.422  ,  9058.744  ], dtype=float32),\n",
+       "    'modifiers': {'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}},\n",
+       "   {'name': 'ztautau',\n",
+       "    'data': array([2.6406991e+00, 2.5416725e+02, 1.9917854e+04, 6.4259150e+05],\n",
+       "          dtype=float32),\n",
+       "    'modifiers': {'data': None, 'name': 'mu_ztautau', 'type': 'normfactor'}}]}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9e2a9fc-de1c-4d9f-9bb1-2e9a4908d009",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the saved density ratios\n",
-    "ratios = {}\n",
-    "ratios['SR'] = {}\n",
-    "\n",
-    "for process_type in mix_model_hypotheses:\n",
-    "\n",
-    "    path_to_ratio = f'{top_path}output_ratios_{process_type}/ratio_{process_type}.npy'\n",
-    "    ratios['SR'][process_type] = jnp.array(np.load(path_to_ratio)[mask_Asimov])\n",
-    "\n",
-    "for process in all_process:\n",
-    "    if process not in mix_model_hypotheses:\n",
-    "\n",
-    "        ratios['SR'][process] = jnp.array(np.ones_like(ratios['SR'][mix_model_hypotheses[0]]))\n"
+    "spec = {\n",
+    "    \"channels\": spec_channels_list,\n",
+    "    \"measurements\": [\n",
+    "        \n",
+    "    ],\n",
+    "    \"observations\": [],\n",
+    "    \"version\": [],\n",
+    "}"
    ]
   },
   {
