first stat-only workspace done

--- a/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
+++ b/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
@@ -2,32 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "63f473bc-65f3-4d85-8715-a212abffeeeb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 706\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-08-05 14:22:41.842872: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1754403761.862438    1153 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1754403761.868337    1153 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-08-05 14:22:41.889193: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, importlib\n",
     "# sys.path.append('../')\n",
@@ -56,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "e95d23e4-7fb8-4e83-a906-f3f691f4fdf2",
    "metadata": {},
    "outputs": [],
@@ -72,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "fe1b6200-68f0-48ba-923d-148ce33b23d3",
    "metadata": {},
    "outputs": [],
@@ -83,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "af161de9-be10-4b51-9bf2-a8aab85da9a8",
    "metadata": {},
    "outputs": [
@@ -127,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "872559e9-4eb3-4a5f-a2f2-6f286c849503",
    "metadata": {},
    "outputs": [
@@ -157,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "3fe09af3-59e9-4273-9c61-34e596595407",
    "metadata": {},
    "outputs": [],
@@ -167,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "5c39c71f-00c9-415d-aa7d-21783ba15b91",
    "metadata": {},
    "outputs": [],
@@ -178,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "id": "52774015-cc7d-427a-999c-eecf7610271d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "65c3c593-f9f1-4d44-a5d6-14f4861b400d",
    "metadata": {},
    "outputs": [],
@@ -238,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "id": "493799b2-93d1-4061-8907-3ce6aa73cce4",
    "metadata": {},
    "outputs": [],
@@ -260,7 +238,7 @@
     "        spec_channels_list[-1][\"samples\"].append(\n",
     "            {\n",
     "                \"name\": process,\n",
-    "                \"data\": hist_channel[process],\n",
+    "                \"data\": hist_channel[process].astype(float).tolist(),\n",
     "                \"modifiers\": {\n",
     "                    \"data\": None,\n",
     "                    \"name\": f\"mu_{process}\",\n",
@@ -272,126 +250,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "bf457a30-e0fe-475c-8d17-5c58d24243d0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'SR',\n",
-       "  'type': 'unbinned',\n",
-       "  'weights': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal//weights_nominal_Asimov.npy',\n",
-       "  'samples': [{'name': 'htautau',\n",
-       "    'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "    'modifiers': [{'data': None, 'name': 'mu_htautau', 'type': 'normfactor'}]},\n",
-       "   {'name': 'ttbar',\n",
-       "    'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "    'modifiers': [{'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}]},\n",
-       "   {'name': 'ztautau',\n",
-       "    'data': '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/output_training_nominal/output_ratios_ztautau/ratio_ztautau.npy',\n",
-       "    'modifiers': [{'data': None,\n",
-       "      'name': 'mu_ztautau',\n",
-       "      'type': 'normfactor'}]}]},\n",
-       " {'name': 'SR_binned',\n",
-       "  'type': 'binned',\n",
-       "  'samples': [{'name': 'htautau',\n",
-       "    'data': array([1.3404816], dtype=float32),\n",
-       "    'modifiers': {'data': None, 'name': 'mu_htautau', 'type': 'normfactor'}},\n",
-       "   {'name': 'ttbar',\n",
-       "    'data': array([0.20330866], dtype=float32),\n",
-       "    'modifiers': {'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}},\n",
-       "   {'name': 'ztautau',\n",
-       "    'data': array([7.261923], dtype=float32),\n",
-       "    'modifiers': {'data': None, 'name': 'mu_ztautau', 'type': 'normfactor'}}]},\n",
-       " {'name': 'CR',\n",
-       "  'type': 'binned',\n",
-       "  'samples': [{'name': 'htautau',\n",
-       "    'data': array([3.4308802e-02, 1.9245273e+00, 1.4397985e+01, 1.4372072e+02],\n",
-       "          dtype=float32),\n",
-       "    'modifiers': {'data': None, 'name': 'mu_htautau', 'type': 'normfactor'}},\n",
-       "   {'name': 'ttbar',\n",
-       "    'data': array([  110.26796,  8016.983  , 20536.422  ,  9058.744  ], dtype=float32),\n",
-       "    'modifiers': {'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'}},\n",
-       "   {'name': 'ztautau',\n",
-       "    'data': array([2.6406991e+00, 2.5416725e+02, 1.9917854e+04, 6.4259150e+05],\n",
-       "          dtype=float32),\n",
-       "    'modifiers': {'data': None, 'name': 'mu_ztautau', 'type': 'normfactor'}}]}]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spec = {\n",
     "    \"channels\": spec_channels_list,\n",
     "    \"measurements\": [\n",
-    "        \n",
+    "        {\n",
+    "            \"name\": \"higgs_measurement\",\n",
+    "            \"config\": {\n",
+    "                \"poi\": \"mu_htautau\", \"parameters\": []\n",
+    "            }\n",
+    "        }\n",
     "    ],\n",
     "    \"observations\": [],\n",
-    "    \"version\": [],\n",
+    "    \"version\": \"1.0.0\",\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27bbf3d6-7da7-4ae3-a898-42aad04171a0",
+   "execution_count": 58,
+   "id": "0d2b39e8-1eaa-445a-9a5a-6a3698ed7224",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec = {\n",
-    "    \"channels\": [\n",
-    "        {\n",
-    "            \"name\": \"SR\",\n",
-    "            \"type\": \"unbinned\",\n",
-    "            \"weights\": path_to_Asimov_weights,\n",
-    "            \"samples\": [\n",
-    "                {\n",
-    "                    \"data\": \"/path/to/data/data.npy\",\n",
-    "                    \"modifiers\":[\n",
-    "                        \"data\": None,\n",
-    "                        \"name\": \"mu_higgs\",\n",
-    "                        \"type\": \"normfactor\"\n",
-    "                    ],\n",
-    "                    \"name\": \"Signal\"\n",
-    "                },\n",
-    "                {\n",
-    "                    \"data\": \"/path/to/data/data.npy\",\n",
-    "                    \"weights\": \"/path/to/weights/weights.npy\",\n",
-    "                    \"modifiers\": [\n",
-    "                        \"data\": None,\n",
-    "                        \"name\": \"mu_ztautau\",\n",
-    "                        \"type\": \"normfactor\"\n",
-    "                    ],\n",
-    "                    \"name\": \"Background\",\n",
-    "                },\n",
-    "            ]\n",
-    "        },\n",
-    "        {\n",
-    "            \"name\": \"SR_binned\",\n",
-    "            \"type\": \"binned\",\n",
-    "            \"samples\": [\n",
-    "                {\n",
-    "                    \"data\": [],\n",
-    "                    \"modifiers\": [],\n",
-    "                    \"name\": \"Signal\"\n",
-    "                },\n",
-    "                {\n",
-    "                    \"data\": [],\n",
-    "                    \"modifiers\": [],\n",
-    "                    \"name\": \"Background\"\n",
-    "                }\n",
-    "            ]\n",
-    "        }\n",
-    "    ],\n",
-    "    \"measurements\": [],\n",
-    "    \"observations\":[],\n",
-    "    \"version\": \"1.0.0\"\n",
-    "}"
+    "import json\n",
+    "\n",
+    "with open(\"workspace_stat_only.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(spec, f, indent=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c5436a3-c849-47eb-976d-9e87d192367e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
