added per-event systematics to the spec_list_channels

--- a/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
+++ b/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
@@ -285,8 +285,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "3c5436a3-c849-47eb-976d-9e87d192367e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TES', 'JES']\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_to_dict_systs = f\"{saved_data}dict_systs.npy\"\n",
+    "\n",
+    "# Check if user has provided uncertainty NPs\n",
+    "if \"dict_systs\" in config:\n",
+    "    dict_systs = config[\"dict_systs\"]\n",
+    "    # Load the SR yield variations\n",
+    "    with open(f\"{saved_data}yield_SR_variations.pkl\", \"rb\") as fp:\n",
+    "        nu_var_SR = pickle.load(fp)\n",
+    "    # Save the Control Region variation histogram\n",
+    "    with open(f\"{saved_data}hist_binned_variations.pkl\", \"rb\") as fp:\n",
+    "        hist_variations = pickle.load(fp)\n",
+    "else:\n",
+    "    dict_systs = {}\n",
+    "\n",
+    "# Full list of systematics\n",
+    "list_syst = [key for key in dict_systs]\n",
+    "\n",
+    "print(list_syst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1f939d8e-fa22-408e-b7da-e984df37f6c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'TES': {'process': ['htautau', 'ttbar', 'ztautau'],\n",
+       "  'directions': ['up', 'dn']},\n",
+       " 'JES': {'process': ['htautau', 'ttbar', 'ztautau'],\n",
+       "  'directions': ['up', 'dn']}}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_systs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "3cec3a77-c65b-407b-b319-7003575c5358",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "top_path_systematics = f'{path_prefix}output_training_systematics/'\n",
+    "\n",
+    "for syst, data in dict_systs.items():\n",
+    "    \n",
+    "    for process_dict in spec_channels_list[0][\"samples\"]:\n",
+    "        \n",
+    "        process_name = process_dict[\"name\"]\n",
+    "        \n",
+    "        if process_name in data[\"process\"]:\n",
+    "\n",
+    "            if \"up\" in data[\"directions\"]:\n",
+    "                path = f'{top_path_systematics}output_ratios_{process_name}_{syst}_up/'\n",
+    "                hi_data_path = f'{path}ratio_{syst}_up.npy'\n",
+    "            else:\n",
+    "                hi_data_path = \"\"\n",
+    "                \n",
+    "            if \"dn\" in data[\"directions\"]:\n",
+    "                path = f'{top_path_systematics}output_ratios_{process_name}_{syst}_dn/'\n",
+    "                lo_data_path = f'{path}ratio_{syst}_dn.npy'\n",
+    "            else:\n",
+    "                lo_data_path = \"\"\n",
+    "            \n",
+    "            process_dict[\"modifiers\"].append(\n",
+    "                {\n",
+    "                    \"data\": {\"hi_data\": hi_data_path, \"lo_data\": lo_data_path},\n",
+    "                    \"name\": f\"alpha_{syst}\",\n",
+    "                    \"type\": \"shapesys\"   \n",
+    "                }\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6042b150-f87d-457f-898f-a82be52b9962",
    "metadata": {},
    "outputs": [],
    "source": []
