--- a/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
+++ b/FAIR_universe_Higgs_tautau/Build_Workspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 100,
    "id": "63f473bc-65f3-4d85-8715-a212abffeeeb",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "id": "e95d23e4-7fb8-4e83-a906-f3f691f4fdf2",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "id": "fe1b6200-68f0-48ba-923d-148ce33b23d3",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "id": "af161de9-be10-4b51-9bf2-a8aab85da9a8",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "id": "872559e9-4eb3-4a5f-a2f2-6f286c849503",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 105,
    "id": "3fe09af3-59e9-4273-9c61-34e596595407",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 106,
    "id": "5c39c71f-00c9-415d-aa7d-21783ba15b91",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
    "id": "52774015-cc7d-427a-999c-eecf7610271d",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 108,
    "id": "65c3c593-f9f1-4d44-a5d6-14f4861b400d",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 109,
    "id": "493799b2-93d1-4061-8907-3ce6aa73cce4",
    "metadata": {},
    "outputs": [],
@@ -239,18 +239,18 @@
     "            {\n",
     "                \"name\": process,\n",
     "                \"data\": hist_channel[process].astype(float).tolist(),\n",
-    "                \"modifiers\": {\n",
+    "                \"modifiers\": [{\n",
     "                    \"data\": None,\n",
     "                    \"name\": f\"mu_{process}\",\n",
     "                    \"type\": \"normfactor\",  \n",
-    "                }\n",
+    "                }]\n",
     "            }\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 110,
    "id": "bf457a30-e0fe-475c-8d17-5c58d24243d0",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 111,
    "id": "0d2b39e8-1eaa-445a-9a5a-6a3698ed7224",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 112,
    "id": "3c5436a3-c849-47eb-976d-9e87d192367e",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 113,
    "id": "1f939d8e-fa22-408e-b7da-e984df37f6c0",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "  'directions': ['up', 'dn']}}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 114,
    "id": "3cec3a77-c65b-407b-b319-7003575c5358",
    "metadata": {
     "scrolled": true
@@ -384,8 +384,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 119,
+   "id": "ae34f96d-7013-4c0b-b932-427542a981a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_channel_index = {\n",
+    "    'SR': 0,\n",
+    "    'SR_binned': 1,\n",
+    "    'CR': 2\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "6af8479d-2767-4032-b555-4897dd65847d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(spec_channels_list[dict_channel_index[channel_selected]][\"samples\"][0]['data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "6042b150-f87d-457f-898f-a82be52b9962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_selected =  'SR_binned'\n",
+    "\n",
+    "for syst, data in dict_systs.items():\n",
+    "    \n",
+    "    for process_dict in spec_channels_list[dict_channel_index[channel_selected]][\"samples\"]:\n",
+    "        \n",
+    "        process_name = process_dict[\"name\"]\n",
+    "        \n",
+    "        if process_name in data[\"process\"]:\n",
+    "\n",
+    "            if \"up\" in data[\"directions\"]:\n",
+    "                hi_data = hist_variations[channel_selected][process_name][syst]['up']\n",
+    "            else:\n",
+    "                hi_data = np.ones(len(spec_channels_list[dict_channel_index[channel_selected]][\"samples\"][0]['data'])).astype(float).to_list()\n",
+    "                \n",
+    "            if \"dn\" in data[\"directions\"]:\n",
+    "                lo_data = hist_variations[channel_selected][process_name][syst]['dn']\n",
+    "            else:\n",
+    "                lo_data = 2.0 - hi_data\n",
+    "            \n",
+    "            process_dict[\"modifiers\"].append(\n",
+    "                {\n",
+    "                    \"data\": {\"hi_data\": hi_data, \"lo_data\": lo_data},\n",
+    "                    \"name\": f\"alpha_{syst}\",\n",
+    "                    \"type\": \"shapesys\"   \n",
+    "                }\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "5483964b-c9c0-4469-8053-42bd954ac61a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'SR_binned',\n",
+       " 'type': 'binned',\n",
+       " 'samples': [{'name': 'htautau',\n",
+       "   'data': [1.3404816389083862],\n",
+       "   'modifiers': [{'data': None, 'name': 'mu_htautau', 'type': 'normfactor'},\n",
+       "    {'data': {'hi_data': array([1.0010142], dtype=float32),\n",
+       "      'lo_data': array([0.9900152], dtype=float32)},\n",
+       "     'name': 'alpha_TES',\n",
+       "     'type': 'shapesys'},\n",
+       "    {'data': {'hi_data': array([1.2158968], dtype=float32),\n",
+       "      'lo_data': array([0.7761778], dtype=float32)},\n",
+       "     'name': 'alpha_JES',\n",
+       "     'type': 'shapesys'}]},\n",
+       "  {'name': 'ttbar',\n",
+       "   'data': [0.20330865681171417],\n",
+       "   'modifiers': [{'data': None, 'name': 'mu_ttbar', 'type': 'normfactor'},\n",
+       "    {'data': {'hi_data': array([1.], dtype=float32),\n",
+       "      'lo_data': array([1.], dtype=float32)},\n",
+       "     'name': 'alpha_TES',\n",
+       "     'type': 'shapesys'},\n",
+       "    {'data': {'hi_data': array([1.5734978], dtype=float32),\n",
+       "      'lo_data': array([1.2855403], dtype=float32)},\n",
+       "     'name': 'alpha_JES',\n",
+       "     'type': 'shapesys'}]},\n",
+       "  {'name': 'ztautau',\n",
+       "   'data': [7.261922836303711],\n",
+       "   'modifiers': [{'data': None, 'name': 'mu_ztautau', 'type': 'normfactor'},\n",
+       "    {'data': {'hi_data': array([1.], dtype=float32),\n",
+       "      'lo_data': array([0.9090909], dtype=float32)},\n",
+       "     'name': 'alpha_TES',\n",
+       "     'type': 'shapesys'},\n",
+       "    {'data': {'hi_data': array([1.0909091], dtype=float32),\n",
+       "      'lo_data': array([0.7272727], dtype=float32)},\n",
+       "     'name': 'alpha_JES',\n",
+       "     'type': 'shapesys'}]}]}"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spec_channels_list[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d475fa2-e0e7-4a6f-b87d-3da34fb001b8",
    "metadata": {},
    "outputs": [],
    "source": []
